<resources>
    <string name="app_name">TrainingNotes</string>
    <string name="breast_name">Breast</string>
    <string name="legs_name">Legs</string>
    <string name="back_name">Back</string>
    <string name="shoulders_name">Shoulders</string>
    <string name="biceps_name">Biceps</string>
    <string name="triceps_name">Triceps</string>
    <string name="abs_name">ABS</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_In">Sign In</string>
    <string name="register">Register</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="your_profile">Your profile</string>
    <string name="email_with_value_after">Email :</string>
    <string name="first_name_with_value_after">First Name :</string>
    <string name="last_name_with_value_after">Last Name :</string>
    <string name="afe_with_value_after">Age :</string>

    <string name="profile">Profile</string>
    <string name="trainings">Trainings </string>
    <string name="no_trainings_yet">There are no trainings yet.</string>
    <string name="create_your_first">Create your First!</string>
    <string name="muscles">Muscles :</string>
    <string name="exercises">Exercises :</string>
    <string name="date">Date :</string>
    <string name="add_training">Add training</string>
    <string name="get_progress">Ger Progress!</string>
    <string name="state_active">Active</string>
    <string name="state_finished">Finished</string>
    <string name="state_passed">Passed</string>
    <string name="state_planned">Planned</string>
    <string name="state_empty">Empty</string>
    <string name="my_trainings">My Trainings</string>
    <string name="epic_training_name">Epic Training name</string>
    <string name="add_warm_up">Add warm-up</string>
    <string name="exercise">Exercise</string>
    <string name="time">Time</string>
    <string name="add_exercise">Add exercise</string>
    <string name="naming">Naming</string>
    <string name="round_one">1 round</string>
    <string name="round_two">2 round</string>
    <string name="round_three">3 round</string>
    <string name="round_four">4 round</string>
    <string name="save">Save</string>
    <string name="warm_up">Warm Up</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="repeats">Repeats</string>
    <string name="set_weight">%1$s kg</string>
    <string name="add_exercise_error_name_required">You must set Exercise\'s Name</string>
    <string name="add_war_up_error_name_required">You must set Warm-Up\'s Name</string>
    <string name="add_war_up_error_time_required">You must set Warm-Up\'s Time</string>
    <string name="none_muscle_group_error">You must specify at least one Muscle Group</string>
    <string name="none_training_name_error">You must specify Training\'s name</string>
    <string name="none_training_own_weight_error">You must specify Your weight to see the progress</string>
    <string name="none_training_exercises_error">You must specify At least one exercise to save the training</string>
    <string name="update">Update</string>
    <string name="search_by_training_name">Search by name</string>
    <string name="search_by_training_group">Search by Muscle group</string>
    <string name="search_by_training_date">Search by date</string>
    <string name="no_trainings_found">Sorry, no trainings found</string>
    <string name="search">Search</string>
    <string name="muscle">Muscles</string>
    <string name="name">Name</string>
    <string name="search_warning_no_groups_entered">Sorry, but you didn\'t add any muscle groups for search! </string>
    <string name="search_warning_no_date_entered">Sorry, but you didn\'t add any date fro search! </string>

</resources>
