<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mPopupHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/notif_arrow_anim" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chestCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/breast_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mPopupHandle"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/legsCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/legs_name"
            app:layout_constraintTop_toBottomOf="@id/mPopupHandle"
            app:layout_constraintStart_toEndOf="@id/chestCHB"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/backCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/back_name"
            app:layout_constraintTop_toBottomOf="@id/mPopupHandle"
            app:layout_constraintStart_toEndOf="@id/legsCHB"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/shouldersCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/shoulders_name"
            app:layout_constraintTop_toBottomOf="@id/mPopupHandle"
            app:layout_constraintStart_toEndOf="@id/backCHB"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/absCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/abs_name"
            app:layout_constraintTop_toBottomOf="@id/mPopupHandle"
            app:layout_constraintStart_toEndOf="@id/shouldersCHB"
            android:layout_marginTop="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/bicepsCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biceps_name"
            app:layout_constraintTop_toBottomOf="@id/chestCHB"
            app:layout_constraintEnd_toStartOf="@id/guideLine"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="16dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/tricepsCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/triceps_name"
            app:layout_constraintStart_toEndOf="@id/guideLine"
            app:layout_constraintTop_toBottomOf="@id/chestCHB"
            android:layout_marginTop="16dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveSettings"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/trueBlue"
            android:text="@string/save"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bicepsCHB"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="130dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>