<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTrainingState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Saved"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/selectMuscleGroupsBlock"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chestCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/breast_name" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/legsCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:text="@string/legs_name" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/backCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:text="@string/back_name" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/shouldersCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:text="@string/shoulders_name" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/absCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:text="@string/abs_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/bicepsCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/biceps_name" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/tricepsCHB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/triceps_name" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trainingNameET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.LogInOutlineBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                app:hintTextAppearance="@style/BlueHintText"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@+id/guideLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectMuscleGroupsBlock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trainingNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/epic_training_name"
                    android:inputType="text"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightET"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.LogInOutlineBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:minWidth="100dp"
                app:hintTextAppearance="@style/BlueHintText"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideLine"
                app:layout_constraintTop_toBottomOf="@+id/selectMuscleGroupsBlock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weightField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:inputType="text"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnAddWarmUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:drawableStart="@drawable/ic_add"
                android:drawableTint="@color/lightBlue"
                android:text="@string/add_warm_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trainingNameET" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWarmUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddWarmUp"
                tools:itemCount="2"
                tools:listitem="@layout/item_warm_up_exercise" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnAddExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_add"
                android:drawableTint="@color/lightBlue"
                android:text="@string/add_exercise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvWarmUp" />

            <LinearLayout
                android:id="@+id/roundsBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddExercise">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/naming" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/round_one" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/round_two" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/round_three" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/round_four" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roundsBlock"
                tools:itemCount="4"
                tools:listitem="@layout/item_exercise" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>