<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<androidx.appcompat.widget.Toolbar-->
        <!--android:id="@+id/toolBar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="56dp"-->
        <!--style="@style/CustomToolbar"/>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogIn"
        style="@style/BorderedCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.LogInOutlineBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="160dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorHintText"
                app:hintTextAppearance="@style/BlueHintText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.LogInOutlineBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorHintText"
                app:hintTextAppearance="@style/BlueHintText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/singInBtn"
                style="@style/MainActionButtons"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:enabled="false"
                android:text="@string/register"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordBox"
                tools:layout_editor_absoluteX="145dp"
                tools:layout_editor_absoluteY="376dp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/sign_In"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textColor="@color/windows_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singInBtn" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>